# native-texture-unity-plugins

./: .gitignore  CMakeLists.txt  README.md  build_direct3d.bat  build_direct3d.sh  build_metal.sh  build_vulkan.sh
cmake/toolchains/: android-unity.cmake
direct3d/: NativeTexture.cpp  NativeTexture.h
doc/: project.md
metal/: NativeTexture.h  NativeTexture.mm
unity-scripts/: INativeTextureHandle.cs  NativeTextureBackend.cs  NativeTextureD3D12.cs  NativeTextureD3D12Texture.cs  NativeTextureDecodedImage.cs  NativeTextureEntry.cs  NativeTextureMetal.cs  NativeTextureMetalTexture.cs  NativeTextureReleaseScheduler.cs  NativeTextureVulkan.cs  NativeTextureVulkanTexture.cs
vulkan/: NativeTexture.cpp  NativeTexture.h
